# p-nettools

./: .gitignore  README.md  cargo.toml  package.json
crates/frame/: Cargo.toml
crates/frame/src/: id.rs  lib.rs  status.rs
crates/tauri/: .gitignore  Cargo.toml  registry.wxs  tauri.conf.json
crates/tauri/src/: main.rs
crates/ui-wasm/: .gitignore  Cargo.toml  build.rs  webpack.config.js
crates/ui-wasm/src/: lib.rs
crates/ui-wasm/src/config/: logger.rs
crates/ui-wasm/src/ui/: app.rs
crates/ui-wasm/static/: index.html
crates/ui-wasm/tests/: web.rs
