[dependencies]
serde = "1.0"

[package]
name = "frame"
version = "0.1.0"
authors = ["1379 <EternalNightYeah2@yeah.net>"]
license-file = "../../GNU-LICENSE"
repository = ""
edition = "2021"
rust-version = "1.62.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
