[lib]
# dylib cdylib staticlib rlib proc-macro lib 
# https://doc.rust-lang.org/reference/linkage.html?highlight=ffi#linkage
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"
rustflags = '-Ctarget-feature=+atomics,+bulk-memory'

[dependencies]
serde = { version = "^1.0.130", default-features = false, features = [
  "derive",
] }
serde_json = "^1.0.68"
serde_derive = "1"
# yew = { version = "0.19.3", git = "https://hub.nuaa.cf/yewstack/yew.git", features = [
#   "csr",
# ] }
yew = "*"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
pnet_packet = { version = "0.31.0" }
pnet_datalink = { version = "0.31.0" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
  "KeyboardEvent",
]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.30.0", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
] }
libc = "0.2"

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.10"
gloo-utils = "0.1"

[package]
name = "ui-wasm"
version = "0.1.0"
description = "wasm model"
authors = ["1379 <EternalNightYeah2@yeah.net>"]
license-file = "../../GNU-LICENSE"
repository = ""
edition = "2021"
rust-version = "1.62.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
